welcome.lessons.welcome.methods.returning.MethodsReturning.scala.error
Program:5: error: type mismatch;
 found   : Unit
 required: Boolean
    for (i<-1 to 7) {
          ^Program:3: error: type mismatch;
 found   : Unit
 required: Boolean
  if (baggle==0) {
  ^