welcome.lessons.welcome.methods.returning.MethodsReturning.scala.code
def haveBaggle():Boolean = { 
  var baggle = 0
  if (baggle==0) {
    
    for (i<-1 to 7) {
      
      if (estSurBiscuit()==true) {
        baggle = 1
        
      }
    if (baggle==1) {
      return true
    }  
      
    }
    
  }
}